--- a/index.html
+++ b/index.html
@@ -15,22 +15,7 @@
     <div id="container">
         <div id="open">
             <div id="open__title">John Shepard</div>
-            <div id="open__description">I am a full stack developer with experience building web and desktop applications. <br>Check out some of my best projects below.</div>
-        </div>
-
-        <div class="section">
-            <h1 class="section__title"><span class="underline-title">Skills</span></h1>
-            <div class="project__skills" id="center-skills">
-                <span class="project__skill">HTML</span>
-                <span class="project__skill">CSS</span>
-                <span class="project__skill">JavaScript</span>
-                <span class="project__skill">Python</span>
-                <span class="project__skill">Django</span>
-                <span class="project__skill">Tkinter</span>
-                <span class="project__skill">Matplotlib</span>
-                <span class="project__skill">Pandas</span>
-                <span class="project__skill">PostgreSQL</span>
-            </div>
+            <div id="open__description">I am a full stack developer with experience building web and desktop applications.<br>Check out the projects I'm most proud of below!</div>
         </div>
 
         <div class="section">
@@ -42,12 +27,14 @@
                 <div class="project__content">
                     <div class="project__upper">
                         <h2>Playoff Pool Hosting App</h2>
-                        <p>The <a href="https://playoffpoolparty.com/">Playoff Pool Party</a> web app is a platform where users can create and customize a league with other users.  In a league, users can chat with eachother, submit playoff rankings, and compete for points through the NFL playoffs. <br><br>This is my most ambitios project to date.</p>    
+                        <p>The Playoff Pool Party web app is a platform where users can create and customize a league with other users.  In a league, users can chat with eachother, submit playoff rankings, and compete for points through the NFL playoffs. <br><br>This is my most ambitios project to date.</p>    
                         <div class="project__skills">
                             <span class="project__skill">Python</span>
                             <span class="project__skill">Django</span>
                             <span class="project__skill">PostgreSQL</span>
                             <span class="project__skill">JavaScript</span>
+                            <span class="project__skill">HTML</span>
+                            <span class="project__skill">CSS</span>
                         </div>
                     </div>
                     <div class="project__lower">
@@ -108,7 +95,17 @@
         </div>
 
         <div class="section">
-            <h1 class="section__title"><span class="underline-title">Hobbies</span></h1>
+            <h1 class="section__title"><span class="underline-title">Other Stuff</span></h1>
+        </div>
+        <div class="section">
+            <h1 class="section__title"><span class="underline-title">Contact Me</span></h1>
+            <div id="contact-wrap">
+                <a href="">jjshepard.engr@gmail.com</a>
+                <a href="">github</a>
+            </div>
+        </div>
+        <div id="footer">
+            Copyright © 2021 John Shepard
         </div>
     </div>
 
