Add nav menu with translate

--- a/index.html
+++ b/index.html
@@ -13,13 +13,20 @@
 </head>
 <body>
     <div id="container">
+        <div id="nav-wrap">
+            <nav id="topnav">
+                <a class="topnav__item" href="#main__a-projects">Projects</a>
+                <a class="topnav__item" href="">Other Stuff</a>
+                <a class="topnav__item" href="">Contact</a>
+            </nav>
+        </div>
         <div id="open">
             <div id="open__title">John Shepard</div>
-            <div id="open__description">I am a full stack developer with experience building web and desktop applications.<br>Check out the projects I'm most proud of below!</div>
+            <div id="open__description">I am a developer and engineer with experience building web and desktop applications.<br>Check out the projects I'm most proud of below!</div>
         </div>
-
         <div class="section">
-            <h1 class="section__title"><span class="underline-title">Projects</span></h1>
+            <a class="anchor" id='main__a-projects'></a>
+            <h1 class="section__title" id="projects"><span class="underline-title">Projects</span></h1>
             <div class="project__container">
                 <div class="project__image">
                     <img src="./images/pool-party.png" alt="pool-party">
