Added external links, nav links, and styling

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <div id="nav-wrap">
             <nav id="topnav">
                 <a class="topnav__item" href="#main__a-projects">Projects</a>
-                <a class="topnav__item" href="">Other Stuff</a>
-                <a class="topnav__item" href="">Contact</a>
+                <a class="topnav__item" href="#main__a-other">Other Stuff</a>
+                <a class="topnav__item" href="#main__a-contact">Contact</a>
             </nav>
         </div>
         <div id="open">
-            <div id="open__title">John Shepard</div>
-            <div id="open__description">I am a developer and engineer with experience building web and desktop applications.<br>Check out the projects I'm most proud of below!</div>
+            <div id="open__title">John J. Shepard</div>
+            <div id="open__description">I am a developer and engineer with experience building web and desktop applications.<br>Check out some of my most recent projects below!</div>
         </div>
         <div class="section">
             <a class="anchor" id='main__a-projects'></a>
@@ -34,7 +34,7 @@
                 <div class="project__content">
                     <div class="project__upper">
                         <h2>Playoff Pool Hosting App</h2>
-                        <p>The Playoff Pool Party web app is a platform where users can create and customize a league with other users.  In a league, users can chat with eachother, submit playoff rankings, and compete for points through the NFL playoffs. <br><br>This is my most ambitios project to date.</p>    
+                        <p>The Playoff Pool Party web app is a platform where users can create and customize a private league with other users.  In a league, users can chat with eachother, submit playoff rankings, and compete for points through the NFL playoffs. <br><br>This is my most ambitious project to date.  I worked with a UX designer to achieve a clean design and smooth user experience.</p>    
                         <div class="project__skills">
                             <span class="project__skill">Python</span>
                             <span class="project__skill">Django</span>
@@ -46,9 +46,8 @@
                     </div>
                     <div class="project__lower">
                         <div class="project__links">
-                            <a class="project__button">Live Website</a>
-                            <a class="project__button">Public Code Bits</a>
-                            <a class="project__button more">More Info ></a>
+                            <a class="project__button" href="playoffpoolparty.com">Live Website</a>
+                            <a class="project__button" href="https://github.com/jjmakesthings/playoff-pool-party-public">Public Code Snipits</a>
                         </div>
                     </div>
                 </div>
@@ -70,9 +69,7 @@
                     </div>
                     <div class="project__lower">
                         <div class="project__links">
-                            <a class="project__button">Live Website</a>
-                            <a class="project__button">Public Code Bits</a>
-                            <a class="project__button more">More Info ></a>
+                            <a class="project__button" href="https://github.com/jjmakesthings/DropCalcSim">Code Reopository</a>
                         </div>
                     </div>
                 </div>
@@ -84,8 +81,9 @@
                 </div>
                 <div class="project__content">
                     <div class="project__upper">
-                        <h2>Script to engineer and categorize 432 designs</h2>
-                        <p>A script used to design and sort bridge cable dampers for a project that required 432 dampers with unique specifications.  This script loads data into a pandas dataframe, tabulates minimum damper sizing and allows the designer to set different grouping thresholds to optimize for a small number of uniqe designs while minimizing over-engineering.</p>    
+                        <h2>Script to Categorize and Design 432 Bridge Damper Designs</h2>
+                        <p>A a script used to design and sort bridge cable dampers for a project that required 432 dampers with unique specifications.  The script loads customer data into a Pandas dataframe, performs minimum sizing calculations for each location, groups the designs, and assigns complete part numbers.  This enables the designer to experiment with grouping thresholds to create the smallest number of unique designs while minimizing overengineering.
+                        </p>    
                         <div class="project__skills">
                             <span class="project__skill">Python</span>
                             <span class="project__skill">Pandas</span>
@@ -94,7 +92,6 @@
                     <div class="project__lower">
                         <div class="project__links">
                             <a class="project__button" href="https://colab.research.google.com/drive/1HS5An5hjRZrSRfEUid4dpkX7OxzCcAWc?usp=sharing">Colab Notebook</a>
-                            <a class="project__button more">More Info ></a>
                         </div>
                     </div>
                 </div>
@@ -102,13 +99,16 @@
         </div>
 
         <div class="section">
+            <a class="anchor" id='main__a-other'></a>
             <h1 class="section__title"><span class="underline-title">Other Stuff</span></h1>
         </div>
         <div class="section">
+            <a class="anchor" id='main__a-contact'></a>
             <h1 class="section__title"><span class="underline-title">Contact Me</span></h1>
             <div id="contact-wrap">
                 <a href="">jjshepard.engr@gmail.com</a>
-                <a href="">github</a>
+                <a href="https://github.com/jjmakesthings">github</a>
+                <a href="https://drive.google.com/file/d/1syJnPEgaB2vNXQ3tZjgEmL_se-gam2Uh/view?usp=sharing">Resume</a>
             </div>
         </div>
         <div id="footer">
