--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div class="project__content">
                     <div class="project__upper">
                         <h2>CNC workshop</h2>
-                        <p>I started exploring CNC woodwork in 2019 and have since produced a few projects with intricate designs and challenging tolerances.
+                        <p>I started exploring CNC woodwork in 2019 and have since started a small business creating high quality, intricate designs with challenging tolerances.
                         </p>    
                     </div>
                     <div class="project__lower">
